# ProblemSolver

./: .gitignore  AlgorithmOptions.h  Astar.h  BFS.h  BestFirstSearch.cpp  BestFirstSearch.h  CMakeLists.txt  CacheManager.cpp  CacheManager.h  ClientHandler.h  DFS.h  FileCacheManager.cpp  FileCacheManager.h  Main.h  Matrix.cpp  Matrix.h  MutualSearches.h  MyClientHandler.cpp  MyClientHandler.h  MyParallelServer.cpp  MyParallelServer.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  Point.cpp  Point.h  README.md  Searchable.h  Searcher.h  SearcherSolver.h  Server.h  Solver.h  State.h  StringReverse.cpp  StringReverse.h  main.cpp
